--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: RJ Nowling
 email: rnowling@mail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Personal website and blog for RJ Nowling, Red Hat Software Engineer,
-  part-time Ph.D. student in computational physics / bioinformatics.
+  Personal website and blog for RJ Nowling.  Data science engineer with a Ph.D. in Computer Science & Engineering with experience in computational physics, bioinformatics, machine learning, and distributed systems.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://rnowling.github.io" # the base hostname & protocol for your site
 twitter_username: discretestates
