--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: RJ Nowling
-email: rnowling@mail.com
+email: rnowling@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal website and blog for RJ Nowling.  Data science engineer with a Ph.D. in Computer Science & Engineering with experience in computational physics, bioinformatics, machine learning, and distributed systems.
 baseurl: "" # the subpath of your site, e.g. /blog/
