--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: RJ Nowling
-email: rnowling@gmail.com
+title: Nowling Lab
+email: nowling@msoe.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Personal website and blog for RJ Nowling.  Data science engineer with a Ph.D. in Computer Science & Engineering with experience in computational physics, bioinformatics, machine learning, and distributed systems.
+  Lab web site for RJ Nowling, an Assistant professor in Computer Science at the Milwaukee School of Engineering.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://rnowling.github.io" # the base hostname & protocol for your site
 twitter_username: discretestates
