--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Nowling Lab
+title: Finite State PRofessor
 email: nowling@msoe.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Lab web site for RJ Nowling, an Assistant Professor in Electrical Engineering & Computer Science at the Milwaukee School of Engineering.
+  Web site for RJ Nowling, an Assistant Professor in Electrical Engineering & Computer Science at the Milwaukee School of Engineering
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://rnowling.github.io" # the base hostname & protocol for your site
 twitter_username: discretestates
@@ -11,5 +11,3 @@ github_username:  rnowling
 # Build settings
 markdown: kramdown
 
-exclude:
-  - blog.html
