--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Finite State PRofessor
+title: Finite State Professor
 email: nowling@msoe.edu
 description: > # this means to ignore newlines until "baseurl:"
   Web site for RJ Nowling, an Assistant Professor in Electrical Engineering & Computer Science at the Milwaukee School of Engineering
