--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: RJ Nowling
 email: nowling@msoe.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Web site for RJ Nowling, an Assistant Professor in Electrical Engineering & Computer Science at the Milwaukee School of Engineering
+  Web site for RJ Nowling, an Associate Professor in Electrical Engineering & Computer Science at the Milwaukee School of Engineering
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://rnowling.github.io" # the base hostname & protocol for your site
 twitter_username: discretestates
